# minirepo

.github/workflows/: test.yml
bazel/repository/: dependencies.bzl  haskell.bzl
c-example/: BUILD.bazel  example.c
minimal-segfault/: BUILD.bazel  README.md
minimal-segfault/bin-no-th/: Main.hs
minimal-segfault/bin-th/: Main.hs
minimal-segfault/ffi/: BUILD.bazel  FFI.hs  ffi.cabal
nix/: shell.nix
nix/haskell/: default.nix
nix/tooling/: default.nix
